--- a/templatemo_570_chain_app_dev/templatemo_570_chain_app_dev/index.html
+++ b/templatemo_570_chain_app_dev/templatemo_570_chain_app_dev/index.html
@@ -92,11 +92,11 @@ https://templatemo.com/tm-570-chain-app-dev
                 <div class="row">
                   <div class="col-lg-12">
                     <h2>Welcome to airBaltic Virtual's Official Website</h2>
-                    <p>airBaltic Virtual is currently on its way for application to IFVARB!</p>
+                    <p>airBaltic Virtual is currently on its way for application to IFVARB! TESTING</p>
                   </div>
                   <div class="col-lg-12">
                     <div class="white-button first-button scroll-to-section">
-                      <a href="#contact">Free Quote <i class="fab fa-apple"></i></a>
+                      <a href="#contact">Free Quote OKAY <i class="fab fa-apple"></i></a>
                     </div>
                     <div class="white-button scroll-to-section">
                       <a href="#contact">Free Quote <i class="fab fa-google-play"></i></a>
