--- a/templatemo_570_chain_app_dev/templatemo_570_chain_app_dev/index.html
+++ b/templatemo_570_chain_app_dev/templatemo_570_chain_app_dev/index.html
@@ -65,7 +65,7 @@ https://templatemo.com/tm-570-chain-app-dev
               <li class="scroll-to-section"><a href="#services">Services</a></li>
               <li class="scroll-to-section"><a href="#about">About</a></li>
               <li class="scroll-to-section"><a href="#pricing">Pricing</a></li>
-              <li class="scroll-to-section"><a href="#newsletter">Newsletter</a></li>
+              <li class="scroll-to-section"><a href="#newsletter">iNewsletter</a></li>
               <li><div class="gradient-button"><a id="modal_trigger" href="#modal"><i class="fa fa-sign-in-alt"></i>Crew Center</a></div></li> 
             </ul>        
             <a class='menu-trigger'>
